店舗情報のボタン作成

--- a/ginza.html
+++ b/ginza.html
@@ -41,7 +41,7 @@
         <div class="pictures">
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B1tEomWAtTp/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#nakamuratokichi" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B1tEomWAtTp/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -88,11 +88,14 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#nakamuratokichi" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
 
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BxjohkdAz3W/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#zyugetudo" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BxjohkdAz3W/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -139,11 +142,14 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#zyugetudo" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
 
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B8vpLDHANst/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#sabou" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B8vpLDHANst/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -190,10 +196,13 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#sabou" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BpZlC4fHa81/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#appartment" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BpZlC4fHa81/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -240,10 +249,13 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#appartment" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B3w5ZZSAk7l/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#yukinosita" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B3w5ZZSAk7l/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -290,10 +302,13 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#yukinosita" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/Br7QXcEgB8I/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#parla" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/Br7QXcEgB8I/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -340,10 +355,13 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#parla" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BPzW-iCA4sS/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#aokomeya" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BPzW-iCA4sS/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -390,10 +408,13 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#aokomeya" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B18t-QGAONa/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#hayashiya" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B18t-QGAONa/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -440,10 +461,13 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#hayashiya" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/B7F-KSMA7Sp/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#chaya" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/B7F-KSMA7Sp/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -490,10 +514,13 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#chaya" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
             <div class="photo">
                 <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/BGg8SvBkpAz/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:210px; min-width:150px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-                    <div style="padding:16px;"> <a href="#toraya" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
+                    <div style="padding:16px;"> <a href="https://www.instagram.com/p/BGg8SvBkpAz/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank">
                             <div style=" display: flex; flex-direction: row; align-items: center;">
                                 <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
                                 <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;">
@@ -540,6 +567,9 @@
                     </div>
                 </blockquote>
                 <script async src="//www.instagram.com/embed.js"></script>
+                <div class="information">
+                <a href="#toraya" class="shoplink">店舗情報を見る</a>
+                </div>
             </div>
         </div>
     </div>
